--- a/GraphicCalc/src/gui/Gui.form
+++ b/GraphicCalc/src/gui/Gui.form
@@ -327,6 +327,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="="/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_equalActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btn_mul">
               <Properties>
@@ -375,7 +378,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="POO2 - Calculatrice Graphique"/>
+            <Property name="text" type="java.lang.String" value="POO2 - Calculatrice Graphique - 2015"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
