--- a/GraphicCalc/src/gui/Gui.form
+++ b/GraphicCalc/src/gui/Gui.form
@@ -2,25 +2,6 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Container class="javax.swing.JPanel" name="jPanel3">
-
-      <Layout>
-        <DimensionLayout dim="0">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="100" max="32767" attributes="0"/>
-          </Group>
-        </DimensionLayout>
-        <DimensionLayout dim="1">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="100" max="32767" attributes="0"/>
-          </Group>
-        </DimensionLayout>
-      </Layout>
-    </Container>
-    <Component class="javax.swing.JFileChooser" name="jFileChooser1">
-    </Component>
-    <Component class="javax.swing.JFileChooser" name="jFileChooser2">
-    </Component>
     <Container class="javax.swing.JMenuBar" name="jMenuBar1">
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
@@ -153,6 +134,8 @@
                               <Component id="btn_ret" min="-2" pref="53" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="btn_div" min="-2" pref="53" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="btn_pOpen" min="-2" pref="53" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -167,10 +150,7 @@
                                       <Component id="jButton5" min="-2" pref="53" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jButton7" min="-2" pref="53" max="-2" attributes="0"/>
-                                          <Component id="btn_pOpen" alignment="0" min="-2" pref="53" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="jButton7" min="-2" pref="53" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jButton0" min="-2" pref="53" max="-2" attributes="0"/>
@@ -181,36 +161,43 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="1" attributes="0">
-                                          <Component id="jButton9" min="-2" pref="53" max="-2" attributes="0"/>
-                                          <Component id="btn_pClose" min="-2" pref="53" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="btn_equal" min="-2" pref="53" max="-2" attributes="0"/>
-                                          <Component id="btn_plus" min="-2" pref="53" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
                                       <Component id="jButton3" min="-2" pref="53" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Component id="btn_mul" min="-2" pref="53" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="btn_pClose" min="-2" pref="53" max="-2" attributes="0"/>
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jButton6" min="-2" pref="53" max="-2" attributes="0"/>
-                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="btn_moins" min="-2" pref="53" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Group type="103" groupAlignment="1" attributes="0">
+                                                  <Component id="jButton9" min="-2" pref="53" max="-2" attributes="0"/>
+                                                  <Component id="btn_point" min="-2" pref="53" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="btn_equal" min="-2" pref="53" max="-2" attributes="0"/>
+                                                  <Component id="btn_plus" min="-2" pref="53" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="jButton6" min="-2" pref="53" max="-2" attributes="0"/>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Component id="btn_moins" min="-2" pref="53" max="-2" attributes="0"/>
+                                          </Group>
+                                      </Group>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="btn_tan" alignment="0" min="-2" pref="53" max="-2" attributes="0"/>
+                                          <Component id="btn_cos" min="-2" pref="53" max="-2" attributes="0"/>
+                                          <Component id="btn_sin" min="-2" pref="53" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
-                              </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="btn_tan" alignment="0" min="-2" pref="53" max="-2" attributes="0"/>
-                                  <Component id="btn_cos" min="-2" pref="53" max="-2" attributes="0"/>
-                                  <Component id="btn_sin" min="-2" pref="53" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="10" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -223,6 +210,7 @@
                           <Component id="btn_ce" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                           <Component id="btn_c" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                           <Component id="btn_div" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="btn_pOpen" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -230,30 +218,38 @@
                           <Component id="jButton3" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                           <Component id="jButton1" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                           <Component id="btn_mul" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="btn_sin" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton4" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="jButton5" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="jButton6" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="btn_moins" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="btn_cos" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton7" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="jButton8" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="jButton9" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="btn_plus" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="btn_tan" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="btn_equal" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="jButton0" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="btn_pOpen" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                           <Component id="btn_pClose" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="jButton4" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="jButton5" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="jButton6" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="btn_moins" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="jButton7" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="jButton8" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="jButton9" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="btn_plus" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="btn_equal" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="jButton0" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                                  <Component id="btn_point" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="btn_sin" min="-2" pref="44" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="btn_cos" min="-2" pref="44" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="btn_tan" min="-2" pref="44" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -512,6 +508,17 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_pCloseActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="btn_point">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Trebuchet MS" size="14" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="."/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_pointActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
